# Kubernetes_Tutorial

./: .gitignore  README.md  docker-compose.yml  kubectl_commands.txt  pyproject.toml  requirements.txt
Automatic_Scaling/: deplyoment.yml  hpa.yml  service.yml
Manifest_files/: cron-job.yml  daemonset.yml  job.yml  persistencevolumeclaim.yml  persistent-volume.yml
MySql/: config.yml  secrets.yml  service.yml  statefulset.yml
fastapi_app/: .dockerignore  Dockerfile  app.py  model.joblib  schema.py
k8s/: fastapi_deployment.yml  fastapi_pod.yml  fastapi_service.yml  streamlit_deployment.yml  streamlit_pod.yml  streamlit_service.yml
streamlit_app/: .dockerignore  Dockerfile  main.py
